<resources>
    <string name="app_name">Sample</string>
    <string name="my_account">My Account</string>
    <string name="login">Login</string>
    <string name="icon1">icon1</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="icon3">icon3</string>
    <string name="icon2">icon2</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="loginUrl">http://10.0.2.2//konnectit/login.php</string>
    <string name="registerUrl">http://10.0.2.2//konnectit/register.php</string>
    <string name="friendUrl">http://10.0.2.2//konnectit/friends.php</string>
    <string name="profileUrl">http://10.0.2.2//konnectit/profile.php</string>
    <string name="remFriendUrl">http://10.0.2.2//konnectit/remFriends.php</string>
    <string name="notifUrl">http://10.0.2.2//konnectit/notifications.php</string>
    <string name="remNotifUrl">http://10.0.2.2//konnectit/remNotifs.php</string>
    <string name="searchFriendsUrl">http://10.0.2.2//konnectit/searchFriends.php</string>
    <string name="searchUsersUrl">http://10.0.2.2//konnectit/searchUsers.php</string>
    <string name="uploadUrl">http://10.0.2.2//konnectit/upload.php</string>
    <string name="postUrl">http://10.0.2.2//konnectit/post.php</string>
    <string name="addCommentUrl">http://10.0.2.2//konnectit/addComment.php</string>
    <string name="addReplyUrl">http://10.0.2.2//konnectit/addReply.php</string>
    <string name="postloadUrl">http://10.0.2.2//konnectit/postload.php</string>
    <string name="replyloadUrl">http://10.0.2.2//konnectit/replyload.php</string>
    <string name="addFriendUrl">http://10.0.2.2//konnectit/addFriend.php</string>
    <string name="acceptFrUrl">http://10.0.2.2//konnectit/acceptFr.php</string>
    <string name="deleteFrUrl">http://10.0.2.2//konnectit/deleteFr.php</string>
    <string name="frLoadUrl">http://10.0.2.2//konnectit/loadFr.php</string>
    <string name="sharePostUrl">http://10.0.2.2//konnectit/sharePost.php</string>
    <string name="likeUrl">http://10.0.2.2//konnectit/like.php</string>
    <string name="unlikeUrl">http://10.0.2.2//konnectit/unlike.php</string>
    <string name="likeCommentUrl">http://10.0.2.2//konnectit/likeComment.php</string>
    <string name="unlikeCommentUrl">http://10.0.2.2//konnectit/unlikeComment.php</string>
    <string name="likeReplyUrl">http://10.0.2.2//konnectit/likeReply.php</string>
    <string name="unlikeReplyUrl">http://10.0.2.2//konnectit/unlikeReply.php</string>
    <string name="isLikedUrl">http://10.0.2.2//konnectit/isLiked.php</string>
    <string name="isReplyLikedUrl">http://10.0.2.2//konnectit/isReplyLiked.php</string>
    <string name="isCommentLikedUrl">http://10.0.2.2//konnectit/isCommentLiked.php</string>
    <string name="isPostVisibleUrl">http://10.0.2.2//konnectit/isPostVisible.php</string>
    <string name="isPrivateUrl">http://10.0.2.2//konnectit/isPrivate.php</string>
    <string name="isFriendUrl">http://10.0.2.2//konnectit/isFriend.php</string>
    <string name="singlePostLoadUrl">http://10.0.2.2//konnectit/singlePostLoad.php</string>
    <string name="singleCommentLoadUrl">http://10.0.2.2//konnectit/singleCommentLoad.php</string>
    <string name="deleteprofileUrl">http://10.0.2.2//konnectit/deleteprofile.php</string>
    <string name="chatLoadUrl">http://10.0.2.2//konnectit/chatLoad.php</string>
    <string name="sendMsgUrl">http://10.0.2.2//konnectit/sendMsg.php</string>
    <string name="delPostUrl">http://10.0.2.2//konnectit/delPost.php</string>
    <string name="settingsLoadUrl">http://10.0.2.2//konnectit/settingsLoad.php</string>
    <string name="profileLoadUrl">http://10.0.2.2//konnectit/editprofileLoad.php</string>
    <string name="settingsSaveUrl">http://10.0.2.2//konnectit/savesettings.php</string>
    <string name="delCommentUrl">http://10.0.2.2//konnectit/delComment.php</string>
    <string name="delReplyUrl">http://10.0.2.2//konnectit/delReply.php</string>
    <string name="editPostLoadUrl">http://10.0.2.2//konnectit/editPostLoad.php</string>
    <string name="editPostDoneUrl">http://10.0.2.2//konnectit/editPostDone.php</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newsFeedLoadUrl">http://10.0.2.2//konnectit/newsFeedLoad.php</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="ProfileFeedUrl">http://10.0.2.2//konnectit/ProfilePosts.php</string>
    <string name="likesLoadUrl">http://10.0.2.2//konnectit/likesLoad.php</string>
    <string name="likesLoadCommentsUrl">http://10.0.2.2//konnectit/likesLoadComments.php</string>
    <string name="likesLoadRepliesUrl">http://10.0.2.2//konnectit/likesLoadReplies.php</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>