<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgmain"
    tools:context=".Register">


    <TextView
        android:id="@+id/RegisterHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout_2"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:background="@drawable/round"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterHead"
        android:backgroundTint="@color/black">

        <LinearLayout
            android:id="@+id/Linear1_2"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/round2"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/icon1_2"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/icon1"
                android:src="@drawable/user2">

            </ImageView>

            <EditText
                android:id="@+id/regUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00B6DCF1"
                android:hint="@string/username"
                android:textColor="@android:color/white"
                android:textColorHint="#70F8F7F7"
                android:paddingLeft="15dp"
                android:textSize="18sp"
                android:inputType="text"
                >

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Linear2_2"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round2"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/icon2_2"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/icon1"
                android:src="@drawable/user2">

            </ImageView>

            <EditText
                android:id="@+id/regEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00B6DCF1"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:textColor="@android:color/white"
                android:textColorHint="#70F8F7F7"
                android:textSize="18sp"
                >

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Linear3_2"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round2"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/icon3_2"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/icon1"
                android:src="@drawable/user2">

            </ImageView>

            <EditText
                android:id="@+id/regFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00B6DCF1"
                android:hint="@string/first_name"
                android:textColor="@android:color/white"
                android:textColorHint="#70F8F7F7"
                android:paddingLeft="15dp"
                android:textSize="18sp"

                >

            </EditText>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/Linear4_2"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round2"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/icon4_2"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/icon2"
                android:src="@drawable/lock2">

            </ImageView>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:passwordToggleEnabled="true"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regPwd1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:backgroundTint="#00000000"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textColorHint="#70F8F7F7"

                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Linear4_2"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round2"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/icon4_2"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/icon2"
                android:src="@drawable/lock2">

            </ImageView>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:passwordToggleEnabled="true"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regPwd2"
                android:layout_width="match_parent"
                android:paddingTop="10dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#00000000"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textColorHint="#70F8F7F7"
                />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/sign_up_text"
            android:backgroundTint="@color/black"
            android:elevation="0dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/yellow"
            android:textSize="15dp"
            android:id="@+id/btnSignUp"
            app:strokeColor="@color/yellow"
            app:strokeWidth="4dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:cornerRadius="10dp"
            />


<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/btnSignUp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:background="@drawable/round3"-->
<!--            android:onClick="openDashboard"-->
<!--            android:text="@string/sign_up_text"-->
<!--            android:textColor="@android:color/white" />-->


    </LinearLayout>

    <ImageView
        android:id="@+id/icon5_2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/icon3"
        android:src="@drawable/man2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterHead" />

    <TextView
        android:id="@+id/RegisterToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openLogin"
        android:text="Already a member? Login Here!"
        android:textColor="#0B3850"
        android:textSize="15sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_2"
        app:layout_constraintVertical_bias="0.38" />


</androidx.constraintlayout.widget.ConstraintLayout>