<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/LoginHead"
        android:layout_width="161dp"
        android:layout_height="152dp"
        android:layout_marginTop="56dp"
        android:text="Already\nhave an account?"
        android:textColor="#020000"
        android:textSize="35sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"

        android:src="@drawable/ic_register_hero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/LoginHead"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:background="@drawable/round"
        android:backgroundTint="@color/black"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginHead">

        <LinearLayout
            android:id="@+id/Linear1"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/round2"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/icon1"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/icon1"
                android:src="@drawable/user2">

            </ImageView>

            <EditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00B6DCF1"
                android:hint="@string/username"
                android:paddingLeft="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/pastelpink"
                android:textSize="18sp">

            </EditText>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/Linear2"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round2"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/icon2"
                android:src="@drawable/lock2">

            </ImageView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00000000"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingTop="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/pastelpink"
                    android:textSize="18sp"

                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/primaryyellow"
            android:elevation="0dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/yellow"
            app:strokeWidth="4dp" />

        <!--        <androidx.appcompat.widget.AppCompatButton-->
        <!--            android:id="@+id/btnSignIn"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="50dp"-->
        <!--            android:background="@drawable/round3"-->
        <!--            android:text="@string/sign_in"-->
        <!--            android:textColor="@android:color/white" />-->


    </LinearLayout>

    <ImageView
        android:id="@+id/icon3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/icon3"
        android:src="@drawable/man2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginHead" />

    <TextView
        android:id="@+id/LoginToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openRegister"
        android:text="Not a member? Sign Up Here!"
        android:textColor="#0B3850"
        android:textSize="18sp"
        android:typeface="sans"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.198" />


</androidx.constraintlayout.widget.ConstraintLayout>